# human-adviser-study

./: .gitignore  Cargo.toml  README.md  mturk.html  mturk_lla.html  mturk_none.html
docs/: index.html  study_frontend.js
docs/assets/data/: game.json.game  strat.json.strat  tiles.json.tiles
study_backend/: Cargo.toml  Dockerfile  README.md
study_backend/src/: main.rs
study_frontend/: Cargo.toml  README.md
study_frontend/assets/data/: game.json.game  strat.json.strat  tiles.json.tiles
study_frontend/assets/data/dummy/: game.json.game
study_frontend/assets/data/never_burger/: strat.json.strat
study_frontend/assets/data/no_constraints/: strat.json.strat
study_frontend/src/: assets.rs  main.rs
study_frontend/src/menu/: end.rs  main.rs  mod.rs  start.rs
study_frontend/src/study/: components.rs  logic_systems.rs  mod.rs  systems.rs  ui_systems.rs
study_results/: parse_results.py
study_results/data/: processed_data.csv
study_shared_types/: Cargo.toml
study_shared_types/src/: lib.rs
