[package]
name = "study_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
mysql_async = "0.30.0"
study_shared_types = { path= "../study_shared_types" }
#dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.4"