[package]
name = "study_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
study_shared_types = { path= "../study_shared_types" }
bevy = "0.8"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "=0.2.82"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]