[package]
name = "study_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
study_shared_types = { path= "../study_shared_types" }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "=0.2.83"
bevy = "0.8"
bevy_common_assets = { version = "0.3", features = ["json"] }
bevy_asset_loader = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]